updated styles--fixed horizontal scroll

--- a/less/container.less
+++ b/less/container.less
@@ -3,6 +3,6 @@ html {
   .container {
     margin: auto;
     background-color: white;
-    max-width: 960px;
+    width: 960px;
   }
 }
