--- a/less/home.less
+++ b/less/home.less
@@ -5,7 +5,7 @@
   position: relative;
   margin: auto;
   padding-bottom: 45px;
-  max-width: 100%;
+
   background: url('../img/home/home-jumbotron.png');
   height: 89vh;
   background-repeat: no-repeat;
