--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,9 +4,7 @@
   align-items: center;
   position: sticky;
   top: 0;
-  width: 100%;
   color: @white;
-  // z-index: 4;
   padding: 10px 50px;
   img {height: 20px;}
   span{
